<resources>
    <string name="app_name">Knowlojia</string>

    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="submit_feedback">Submit</string>
    <string name="about">About app</string>
    <string name="rate_us_please">Rate/Update</string>
    <string name="sort_blogs">Sort Blogs</string>
    <string name="empty_view">No Internet connection. Swipe Down to Refresh.</string>

    <string name="About_App">Developed and Designed by Aross Developers. \nDeveloper:Aross Hamisi.\nAll suggestions for improvements are welcomed.</string>
    <string name="app_descrip">Developed and Designed by Aross Developers.</string>

    <string name="your_email_address">Email Address</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms of Use</string>
    <string name="font_size">18sp</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/8135179316</string>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="privacy_url">https://techknowlojia.blogspot.com/p/privacy-policy.html</string>
    <string name="terms_of_use">https://techknowlojia.blogspot.com/p/terms-of-use.html</string>

</resources>