<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/rate"
        android:title="@string/rate_us_please"
        />
    <item
        android:id="@+id/terms_of_use"
        android:title="@string/terms" />
    <item
        android:id="@+id/privacy"
        android:title="@string/privacy_policy" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/about"
        android:title="@string/about" />
</menu>
